koi/keycloak/gateway-keycloak.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway-koidemo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "29a53d09-eu-de.lb.appdomain.cloud"
  - port:
      number: 80
      name: tcp
      protocol: TCP
    hosts:
    - "29a53d09-eu-de.lb.appdomain.cloud"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-koidemo
spec:
  hosts:
  - "29a53d09-eu-de.lb.appdomain.cloud"
  gateways:
  - default-gateway-koidemo
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak-headless.default.svc.cluster.local
        port:
          number: 80
